fix logo width on mobile devices

--- a/app/assets/stylesheets/pumpic/header.less
+++ b/app/assets/stylesheets/pumpic/header.less
@@ -59,6 +59,6 @@
 }
 @media all and (max-width: 360px) {
     #header .logo-demo {
-        width: 195px;
+        width: 191px;
     }
 }
