--- a/app/assets/stylesheets/skeleton.less
+++ b/app/assets/stylesheets/skeleton.less
@@ -263,6 +263,6 @@ html, body {
 }
 @media (max-width: 360px) {
     #header .logo-demo {
-        width: 195px;
+        width: 191px;
     }
 }
