--- a/public/static/stylesheets/frontend.css
+++ b/public/static/stylesheets/frontend.css
@@ -8192,7 +8192,7 @@ body {
 }
 @media (max-width: 360px) {
   #header .logo-demo {
-    width: 195px;
+    width: 191px;
   }
 }
 /* Theme */
@@ -9052,7 +9052,7 @@ a.list-group-item-danger.active:focus {
 }
 @media all and (max-width: 360px) {
   #header .logo-demo {
-    width: 195px;
+    width: 191px;
   }
 }
 /*# sourceMappingURL=/static/stylesheets/css.map */
